Remove more pointer arithmetic and reinterpret_casts

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -273,6 +273,7 @@ add_library(oscar STATIC
     Utils/PerfMeasurementMetadata.hpp
     Utils/ScopeGuard.hpp
     Utils/SetHelpers.hpp
+    Utils/SpanHelpers.hpp
     Utils/Spsc.hpp
     Utils/StringHelpers.cpp
     Utils/StringHelpers.hpp
