--- a/build_resources/DEV_osc.toml.in
+++ b/build_resources/DEV_osc.toml.in
@@ -14,6 +14,9 @@
 resources = "@CMAKE_CURRENT_SOURCE_DIR@/../../resources"
 docs = "@CMAKE_CURRENT_SOURCE_DIR@/../../docs/build"
 
+# change this if you need OSC to print more information to the log
+# log_level = "trace"  # trace < debug < info < warn < err < critical
+
 # handy for auto-opening an in-development tab
 # initial_tab = "LearnOpenGL/Blending"
 
