--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(oscar_configuration)
 add_subdirectory(oscar)
+add_subdirectory(oscar_demos)
 add_subdirectory(oscar_learnopengl)
 add_subdirectory(OpenSimCreator)
