Extract static OscarConfiguration.hpp into a runtime-modifable osc::AppMetadata (#782)

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -142,6 +142,8 @@ add_library(oscar STATIC
     Platform/AppClock.hpp
     Platform/AppConfig.cpp
     Platform/AppConfig.hpp
+    Platform/AppMetadata.cpp
+    Platform/AppMetadata.hpp
     Platform/IoPoller.cpp
     Platform/IoPoller.hpp
     Platform/Log.cpp
