Set gtest_discover_tests DISCOVERY_MODE to PRE_TEST (#785)

--- a/tests/TestOpenSimCreator/CMakeLists.txt
+++ b/tests/TestOpenSimCreator/CMakeLists.txt
@@ -37,7 +37,12 @@ target_link_libraries(TestOpenSimCreator PUBLIC
 )
 
 # tell CMake (+IDEs) how to find all tests
-gtest_discover_tests(TestOpenSimCreator)
+gtest_discover_tests(
+    TestOpenSimCreator
+
+    # note: this is necessary because of the POST_BUILD dll-copying step below
+    DISCOVERY_MODE PRE_TEST
+)
 
 # for development on Windows, copy all runtime dlls to the exe directory
 # (because Windows doesn't have an RPATH)
