Refactor various classes out of Graphics/ (and into Scene/ or Platform/)

--- a/src/oscar_demos/CMakeLists.txt
+++ b/src/oscar_demos/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(oscar_demos STATIC
 
+    CookiecutterScreen.cpp
+    CookiecutterScreen.hpp
     CustomWidgetsTab.cpp
     CustomWidgetsTab.hpp
     HittestTab.cpp
