Add benches/tests to ALL

--- a/benches/BenchOpenSimCreator/CMakeLists.txt
+++ b/benches/BenchOpenSimCreator/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(benchmark REQUIRED CONFIG)
 
 # BenchOpenSimCreator: main exe that links to `osccore` and benches parts of the APIs
-add_executable(BenchOpenSimCreator EXCLUDE_FROM_ALL
+add_executable(BenchOpenSimCreator
     BenchOpenSimHelpers.cpp
     BenchOpenSimRenderer.cpp
 )
