Standardize header includes in benches/ and tests/

--- a/benches/BenchOpenSimCreator/CMakeLists.txt
+++ b/benches/BenchOpenSimCreator/CMakeLists.txt
@@ -2,8 +2,8 @@ find_package(benchmark REQUIRED CONFIG)
 
 # BenchOpenSimCreator: main exe that links to `osccore` and benches parts of the APIs
 add_executable(BenchOpenSimCreator
-    BenchOpenSimHelpers.cpp
-    BenchOpenSimRenderer.cpp
+    Graphics/BenchOpenSimDecorationGenerator.cpp
+    Utils/BenchOpenSimHelpers.cpp
 )
 
 target_link_libraries(BenchOpenSimCreator PUBLIC
