Add tests for osc::AppSettingValue (#782)

--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -21,6 +21,8 @@ add_executable(testoscar
 
     Maths/TestBVH.cpp
 
+    Platform/TestAppSettingValueType.cpp
+
     Utils/TestCStringView.cpp
     Utils/TestCpp20Shims.cpp
     Utils/TestFileChangePoller.cpp
