Rename frame definition 3D viewer to framedef_viewer so that it gets its own settings (#782)

--- a/resources/imgui_base_config.ini
+++ b/resources/imgui_base_config.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,83
-Size=1920,945
+Pos=0,77
+Size=1920,951
 Collapsed=0
 
 [Window][Debug##Default]
@@ -62,7 +62,7 @@ DockId=0x00000020,0
 
 [Window][Coordinates]
 Pos=0,77
-Size=337,509
+Size=337,385
 Collapsed=0
 DockId=0x00000020,1
 
@@ -215,7 +215,7 @@ Collapsed=0
 
 [Window][viewer0]
 Pos=339,77
-Size=1182,980
+Size=1581,720
 Collapsed=0
 DockId=0x00000028,0
 
@@ -310,7 +310,7 @@ DockId=0x00000015,0
 
 [Window][wizard_3dViewer]
 Pos=269,46
-Size=983,780
+Size=1651,1011
 Collapsed=0
 DockId=0x00000028,0
 
@@ -321,8 +321,8 @@ Collapsed=0
 DockId=0x00000018,0
 
 [Window][Save Changes?]
-Pos=704,460
-Size=512,137
+Pos=704,467
+Size=512,122
 Collapsed=0
 
 [Window][Property Editor]
@@ -367,13 +367,13 @@ DockId=0x0000002A,0
 
 [Window][Navigator]
 Pos=0,77
-Size=337,482
+Size=337,385
 Collapsed=0
 DockId=0x00000020,0
 
 [Window][Properties]
-Pos=0,604
-Size=337,453
+Pos=0,464
+Size=337,333
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -513,9 +513,15 @@ Size=289,945
 Collapsed=0
 DockId=0x00000030,0
 
+[Window][framedef_viewer0]
+Pos=339,77
+Size=1581,749
+Collapsed=0
+DockId=0x00000028,0
+
 [Docking][Data]
 DockNode                                ID=0x00000025 Pos=29,454 Size=621,584 Selected=0xBDBFA952
-DockSpace                               ID=0x8B93E3BD Pos=0,83 Size=1920,945 Split=X Selected=0x945C996A
+DockSpace                               ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,77 Size=1920,951 Split=X Selected=0x945C996A
   DockNode                              ID=0x0000001F Parent=0x8B93E3BD SizeRef=1521,945 Split=X
     DockNode                            ID=0x0000002E Parent=0x0000001F SizeRef=1629,945 Split=Y
       DockNode                          ID=0x00000009 Parent=0x0000002E SizeRef=1920,714 Split=X
@@ -535,7 +541,7 @@ DockSpace                               ID=0x8B93E3BD Pos=0,83 Size=1920,945 Spl
                           DockNode      ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
                             DockNode    ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
                             DockNode    ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Split=Y Selected=0xB7559F23
-                              DockNode  ID=0x00000020 Parent=0x0000001C SizeRef=337,482 Selected=0x2EDB22E0
+                              DockNode  ID=0x00000020 Parent=0x0000001C SizeRef=337,482 Selected=0x241F21A5
                               DockNode  ID=0x0000002C Parent=0x0000001C SizeRef=337,496 Selected=0xB7559F23
                           DockNode      ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
                         DockNode        ID=0x0000000B Parent=0x00000001 SizeRef=362,517 Selected=0x199AB496
@@ -543,7 +549,7 @@ DockSpace                               ID=0x8B93E3BD Pos=0,83 Size=1920,945 Spl
                         DockNode        ID=0x00000007 Parent=0x00000002 SizeRef=1157,916 Split=X Selected=0xEFD926F6
                           DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=811,916 Split=X Selected=0x7644F5CE
                             DockNode    ID=0x0000000E Parent=0x00000004 SizeRef=850,1011 Split=X Selected=0xE9146C8E
-                              DockNode  ID=0x00000028 Parent=0x0000000E SizeRef=753,897 CentralNode=1 Selected=0xE9146C8E
+                              DockNode  ID=0x00000028 Parent=0x0000000E SizeRef=753,897 CentralNode=1 Selected=0x7644F5CE
                               DockNode  ID=0x00000029 Parent=0x0000000E SizeRef=593,897 Selected=0x0FF6C27D
                             DockNode    ID=0x00000010 Parent=0x00000004 SizeRef=1068,1011 Selected=0x075BE350
                           DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=768,916 Split=Y Selected=0x98DE1660
